--- a/styles.css
+++ b/styles.css
@@ -13,24 +13,29 @@ body {
     flex-direction: column;
 }
 
+header {
+    padding: 10px 10px 10px 14px;
+    font-weight: bold;
+
+}
+
 ul {
     display: flex;
     flex-direction: column;
     align-content: space-between;
     padding: 10px;
     list-style: none; 
+    margin-top: 0px;
+    padding-top: 0px;
 }
 
 li {
     padding: 5px;
-    font-weight: bold;
-
 }
 
 a, a:visited {
     text-decoration: none;
     color: #69696a;
-    font-weight: normal;
 }
 
 h1 {
@@ -50,4 +55,77 @@ button {
     border-radius: 30px;
     background-color: #000;
     color: #fff;
+}
+
+@media (min-width: 768px) {
+    nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: baseline;
+    }
+
+    nav button {
+        width: 10%;
+    }
+
+    header {
+        flex-grow: 4;
+    }
+
+    ul {
+        flex-direction: row;
+        justify-content: flex-end;
+    }
+
+    h1 {
+        margin-top: 150px;
+    }
+
+    p {
+        width: 50%;
+
+    }
+
+    .scroll {
+        position: absolute;
+        width: 10%;
+        margin: 0px;
+        bottom: 10px;
+        left: 45%;
+    }
+
+    .circle-1 {
+        position: absolute;
+        height: 225px;
+        width: 225px;
+        background-color: rgba(247, 136, 167, 0.6);
+        border-radius: 50%;
+        right: 150px;
+        bottom: 250px;
+
+    }
+
+    .circle-2 {
+        position: absolute;
+        height: 175px;
+        width: 175px;
+        background-color: rgba(247, 193, 162, 0.7);
+        border-radius: 50%;
+        right: 100px;
+        bottom: 150px;
+
+    }
+
+    .circle-3 {
+        position: absolute;
+        height: 150px;
+        width: 150px;
+        background-color: rgba(207, 130, 213, 0.6);
+        border-radius: 50%;
+        right: 50px;
+        bottom: 275px;
+
+    }
+
 }
